# monitoring_zimknives_esp32

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  display_neopixel.c  display_neopixel.h  htu21d.c  htu21d.h  main.c  monitoring_zimknives.h  mqtt_local.c  mqtt_local.h  sensor_acquisition.c  sensor_acquisition.h  wifi_station.c  wifi_station.h
